# Anydesk

./: .gitignore  README.md  package-lock.json  package.json  render.yaml  vite.config.js
signaling-server/: package.json  render.yaml  server.js
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.toml
src-tauri/src/: capture.rs  commands.rs  input.rs  lib.rs  main.rs  server.rs  tunnel.rs
